# src/typescript-angular2-client-generated/model/IGame.ts
@@ -1,0 +1,76 @@
+/**
+ * SBTech Casino OpenAPI
+ * Definition of the SBTech Casino API.
+ *
+ * OpenAPI spec version: 0.2.0
+ * Contact: eram@sbtech.com
+ *
+ * NOTE: This class is auto generated by the swagger code generator program.
+ * https://github.com/swagger-api/swagger-codegen.git
+ * Do not edit the class manually.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ * http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
+import * as models from './models';
+
+export interface IGame {
+    id: string;
+
+    /**
+     * display name
+     */
+    name: string;
+
+    /**
+     * game type name
+     */
+    type?: string;
+
+    tags?: Array<string>;
+
+    thumbnails?: Array<models.IMedia>;
+
+    background?: models.IMedia;
+
+    /**
+     * game studio name
+     */
+    studio?: string;
+
+    popularity?: number;
+
+    priority?: number;
+
+    /**
+     * last played date-time - RFC3339
+     */
+    lastPlayed?: string;
+
+    /**
+     * game icon promotional overlay.
+     */
+    gameFlag?: IGame.GameFlagEnum;
+
+    props?: models.IGameProps;
+
+    jackpotId?: string;
+
+}
+export namespace IGame {
+    export enum GameFlagEnum {
+        New = <any> 'new',
+        Hot = <any> 'hot',
+        Promoted = <any> 'promoted'
+    }
+}
